--- a/locale/ca.po
+++ b/locale/ca.po
@@ -14,14 +14,6 @@ msgctxt "field:contract,company:"
 msgid "Company"
 msgstr "Empresa"
 
-msgctxt "field:contract,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:contract,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
 msgctxt "field:contract,currency:"
 msgid "Currency"
 msgstr "Moneda"
@@ -38,13 +30,13 @@ msgctxt "field:contract,first_invoice_date:"
 msgid "First Invoice Date"
 msgstr "Data primera factura"
 
+msgctxt "field:contract,first_review_date:"
+msgid "First Review Date"
+msgstr "Primera data de revisió"
+
 msgctxt "field:contract,freq:"
 msgid "Frequency"
 msgstr "Freqüència"
-
-msgctxt "field:contract,id:"
-msgid "ID"
-msgstr "ID"
 
 msgctxt "field:contract,interval:"
 msgid "Interval"
@@ -53,6 +45,10 @@ msgstr "Interval"
 msgctxt "field:contract,lines:"
 msgid "Lines"
 msgstr "Línies"
+
+msgctxt "field:contract,months_renewal:"
+msgid "Months Renewal"
+msgstr "Mesos de renovació"
 
 msgctxt "field:contract,number:"
 msgid "Number"
@@ -66,13 +62,21 @@ msgctxt "field:contract,payment_term:"
 msgid "Payment Term"
 msgstr "Termini de pagament"
 
-msgctxt "field:contract,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
 msgctxt "field:contract,reference:"
 msgid "Reference"
 msgstr "Referència"
+
+msgctxt "field:contract,review_alarm:"
+msgid "Alarm Date"
+msgstr "Data d'alarma"
+
+msgctxt "field:contract,review_limit_date:"
+msgid "Limit Date"
+msgstr "Data límit"
+
+msgctxt "field:contract,reviews:"
+msgid "Reviews"
+msgstr "Revisions"
 
 msgctxt "field:contract,start_date:"
 msgid "Start Date"
@@ -86,77 +90,33 @@ msgctxt "field:contract,state:"
 msgid "State"
 msgstr "Estat"
 
-msgctxt "field:contract,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
 msgctxt "field:contract.configuration,contract_sequence:"
 msgid "Contract Reference Sequence"
 msgstr "Seqüencia referència contracte"
 
-msgctxt "field:contract.configuration,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
+msgctxt "field:contract.configuration,default_months_renewal:"
+msgid "Review Months Renewal"
+msgstr "Mesos de renovació de la revisió"
 
-msgctxt "field:contract.configuration,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
+msgctxt "field:contract.configuration,default_review_alarm:"
+msgid "Alarm Date"
+msgstr "Data d'alarma"
 
-msgctxt "field:contract.configuration,id:"
-msgid "ID"
-msgstr "ID"
+msgctxt "field:contract.configuration,default_review_limit_date:"
+msgid "Limit Date"
+msgstr "Data límit"
 
 msgctxt "field:contract.configuration,journal:"
 msgid "Journal"
 msgstr "Diari"
 
-msgctxt "field:contract.configuration,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
-msgctxt "field:contract.configuration,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract.configuration,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
 msgctxt "field:contract.configuration.account,company:"
 msgid "Company"
 msgstr "Empresa"
 
-msgctxt "field:contract.configuration.account,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:contract.configuration.account,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:contract.configuration.account,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:contract.configuration.account,journal:"
 msgid "Journal"
 msgstr "Diari"
-
-msgctxt "field:contract.configuration.account,rec_name:"
-msgid "Record Name"
-msgstr "Nom registre"
-
-msgctxt "field:contract.configuration.account,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract.configuration.account,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
 
 msgctxt "field:contract.configuration.sequence,company:"
 msgid "Company"
@@ -166,30 +126,6 @@ msgctxt "field:contract.configuration.sequence,contract_sequence:"
 msgid "Contract Reference Sequence"
 msgstr "Seqüencia referència contracte"
 
-msgctxt "field:contract.configuration.sequence,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:contract.configuration.sequence,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:contract.configuration.sequence,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:contract.configuration.sequence,rec_name:"
-msgid "Record Name"
-msgstr "Nom registre"
-
-msgctxt "field:contract.configuration.sequence,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract.configuration.sequence,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
 msgctxt "field:contract.consumption,contract:"
 msgid "Contract"
 msgstr "Contracte"
@@ -197,14 +133,6 @@ msgstr "Contracte"
 msgctxt "field:contract.consumption,contract_line:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
-
-msgctxt "field:contract.consumption,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:contract.consumption,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
 
 msgctxt "field:contract.consumption,credit_lines:"
 msgid "Credit Lines"
@@ -218,10 +146,6 @@ msgctxt "field:contract.consumption,end_period_date:"
 msgid "Finish Period Date"
 msgstr "Data fi període"
 
-msgctxt "field:contract.consumption,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:contract.consumption,init_period_date:"
 msgid "Start Period Date"
 msgstr "Data inici període"
@@ -234,45 +158,17 @@ msgctxt "field:contract.consumption,invoice_lines:"
 msgid "Invoice Lines"
 msgstr "Línies de factura"
 
-msgctxt "field:contract.consumption,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
 msgctxt "field:contract.consumption,start_date:"
 msgid "Start Date"
 msgstr "Data inici"
-
-msgctxt "field:contract.consumption,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract.consumption,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
 
 msgctxt "field:contract.create_consumptions.start,date:"
 msgid "Date"
 msgstr "Data"
 
-msgctxt "field:contract.create_consumptions.start,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:contract.create_invoices.start,date:"
 msgid "Date"
 msgstr "Data"
-
-msgctxt "field:contract.create_invoices.start,id:"
-msgid "ID"
-msgstr "Identificador"
-
-msgctxt "field:contract.line,analytic_accounts:"
-msgid "Analytic Accounts"
-msgstr "Comptes analítics"
-
-msgctxt "field:contract.line,analytic_accounts_size:"
-msgid "Analytic Accounts Size"
-msgstr "Mida dels comptes analítics"
 
 msgctxt "field:contract.line,consumptions:"
 msgid "Consumptions"
@@ -286,14 +182,6 @@ msgctxt "field:contract.line,contract_state:"
 msgid "Contract State"
 msgstr "Estat del contracte"
 
-msgctxt "field:contract.line,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:contract.line,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
 msgctxt "field:contract.line,description:"
 msgid "Description"
 msgstr "Descripció"
@@ -302,10 +190,6 @@ msgctxt "field:contract.line,end_date:"
 msgid "End Date"
 msgstr "Data finalització"
 
-msgctxt "field:contract.line,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:contract.line,last_consumption_date:"
 msgid "Last Consumption Date"
 msgstr "Data últim consum"
@@ -313,14 +197,6 @@ msgstr "Data últim consum"
 msgctxt "field:contract.line,last_consumption_invoice_date:"
 msgid "Last Invoice Date"
 msgstr "Data última factura"
-
-msgctxt "field:contract.line,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
-msgctxt "field:contract.line,sequence:"
-msgid "Sequence"
-msgstr "Seqüència"
 
 msgctxt "field:contract.line,service:"
 msgid "Service"
@@ -334,25 +210,57 @@ msgctxt "field:contract.line,unit_price:"
 msgid "Unit Price"
 msgstr "Preu unitat"
 
-msgctxt "field:contract.line,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
+msgctxt "field:contract.review,activities:"
+msgid "Activities"
+msgstr "Activitats"
 
-msgctxt "field:contract.line,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
+msgctxt "field:contract.review,alarm_date:"
+msgid "Alarm Date"
+msgstr "Data d'alarma"
 
-msgctxt "field:contract.service,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
+msgctxt "field:contract.review,contract:"
+msgid "Contract"
+msgstr "Contractes"
 
-msgctxt "field:contract.service,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
+msgctxt "field:contract.review,limit_date:"
+msgid "Limit Date"
+msgstr "Data límit"
 
-msgctxt "field:contract.service,id:"
-msgid "ID"
-msgstr "ID"
+msgctxt "field:contract.review,lines:"
+msgid "Lines"
+msgstr "Línies"
+
+msgctxt "field:contract.review,review_date:"
+msgid "Review Date"
+msgstr "Data de revisió"
+
+msgctxt "field:contract.review,state:"
+msgid "State"
+msgstr "Estat"
+
+msgctxt "field:contract.review,visual:"
+msgid "Visual"
+msgstr "Visual"
+
+msgctxt "field:contract.review.line,contract_line:"
+msgid "Contract Line"
+msgstr "Línia de contracte"
+
+msgctxt "field:contract.review.line,increase_percentage:"
+msgid "Increase Percentage (%)"
+msgstr "Percentatge d'increment (%)"
+
+msgctxt "field:contract.review.line,price:"
+msgid "Price"
+msgstr "Preu"
+
+msgctxt "field:contract.review.line,review:"
+msgid "Review"
+msgstr "Revisió"
+
+msgctxt "field:contract.review.line,updated_price:"
+msgid "Updated Price"
+msgstr "Preu actualitzat"
 
 msgctxt "field:contract.service,name:"
 msgid "Name"
@@ -362,18 +270,6 @@ msgctxt "field:contract.service,product:"
 msgid "Product"
 msgstr "Producte"
 
-msgctxt "field:contract.service,rec_name:"
-msgid "Record Name"
-msgstr "Nom"
-
-msgctxt "field:contract.service,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:contract.service,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
-
 msgctxt "field:party.party,contract_grouping_method:"
 msgid "Contract Grouping Method"
 msgstr "Mètode d'agrupació de contractes"
@@ -382,33 +278,9 @@ msgctxt "field:party.party.contract_grouping_method,contract_grouping_method:"
 msgid "Contract Grouping Method"
 msgstr "Mètode d'agrupació de contractes"
 
-msgctxt "field:party.party.contract_grouping_method,create_date:"
-msgid "Create Date"
-msgstr "Data de creació"
-
-msgctxt "field:party.party.contract_grouping_method,create_uid:"
-msgid "Create User"
-msgstr "Usuari de creació"
-
-msgctxt "field:party.party.contract_grouping_method,id:"
-msgid "ID"
-msgstr "ID"
-
 msgctxt "field:party.party.contract_grouping_method,party:"
 msgid "Party"
 msgstr "Tercer"
-
-msgctxt "field:party.party.contract_grouping_method,rec_name:"
-msgid "Record Name"
-msgstr "Nom registre"
-
-msgctxt "field:party.party.contract_grouping_method,write_date:"
-msgid "Write Date"
-msgstr "Data de modificació"
-
-msgctxt "field:party.party.contract_grouping_method,write_uid:"
-msgid "Write User"
-msgstr "Usuari de modificació"
 
 msgctxt "help:account.invoice.credit.start,reinvoice_contract:"
 msgid "If true, the consumption that generated this line will be reinvoiced."
@@ -419,6 +291,34 @@ msgstr ""
 msgctxt "help:account.invoice.credit.start,with_refund:"
 msgid "If true, the current invoice(s) will be cancelled."
 msgstr "Si és cert, la actual factura(es) serà cancel·lada."
+
+msgctxt "help:contract,first_review_date:"
+msgid "Date on which the actions should be performed."
+msgstr "Data en què s’han de realitzar les accions."
+
+msgctxt "help:contract,review_alarm:"
+msgid "The date when actions related to reviews should start to be managed."
+msgstr ""
+"La data en què s’haurien de començar a gestionar les accions relacionades "
+"amb les revisions."
+
+msgctxt "help:contract,review_limit_date:"
+msgid "The deadline date on which the actions should be performed."
+msgstr "La data límit en què s’han de realitzar les accions."
+
+msgctxt "help:contract.configuration,default_review_alarm:"
+msgid "The date when actions related to reviews should start to be managed."
+msgstr ""
+"La data en què s’haurien de començar a gestionar les accions relacionades "
+"amb les revisions."
+
+msgctxt "help:contract.configuration,default_review_limit_date:"
+msgid "The deadline date on which the actions should be performed."
+msgstr "La data límit en què s’han de realitzar les accions."
+
+msgctxt "help:contract.review,state:"
+msgid "The current state of the review."
+msgstr "L’estat actual de la revisió."
 
 msgctxt "model:contract,name:"
 msgid "Contract"
@@ -448,9 +348,21 @@ msgctxt "model:contract.create_invoices.start,name:"
 msgid "Create Invoices Start"
 msgstr "Inici crea factures"
 
+msgctxt "model:contract.create_reviews.start,name:"
+msgid "Create Contract Reviews Start"
+msgstr "Inici crea revisions de contracte"
+
 msgctxt "model:contract.line,name:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
+
+msgctxt "model:contract.review,name:"
+msgid "Contract Review"
+msgstr "Revisions de contracte"
+
+msgctxt "model:contract.review.line,name:"
+msgid "Contract Review Line"
+msgstr "Línia de revisió de contracte"
 
 msgctxt "model:contract.service,name:"
 msgid "Contract Service"
@@ -480,6 +392,14 @@ msgctxt "model:ir.action,name:act_contract_line"
 msgid "Contract Lines"
 msgstr "Línies de contractes"
 
+msgctxt "model:ir.action,name:act_contract_review_form_relate"
+msgid "Reviews"
+msgstr "Revisions"
+
+msgctxt "model:ir.action,name:act_contract_review_line"
+msgid "Contract Review Lines"
+msgstr "Línies de revisió de contracte"
+
 msgctxt "model:ir.action,name:act_contract_service"
 msgid "Contract Services"
 msgstr "Serveis de contractes"
@@ -492,6 +412,10 @@ msgctxt "model:ir.action,name:act_open_contract"
 msgid "Contracts"
 msgstr "Contractes"
 
+msgctxt "model:ir.action,name:act_review"
+msgid "Reviews"
+msgstr "Revisions"
+
 msgctxt "model:ir.action,name:wizard_create_consumptions"
 msgid "Create Consumptions"
 msgstr "Crea consums"
@@ -499,6 +423,10 @@ msgstr "Crea consums"
 msgctxt "model:ir.action,name:wizard_create_invoices"
 msgid "Create Invoices"
 msgstr "Crea factures"
+
+msgctxt "model:ir.action,name:wizard_create_reviews"
+msgid "Create Reviews"
+msgstr "Crear revisions"
 
 msgctxt "model:ir.action.act_window.domain,name:"
 msgid "Finished"
@@ -525,6 +453,22 @@ msgstr "Confirmats"
 msgctxt "model:ir.action.act_window.domain,name:act_contract_domain_draft"
 msgid "Draft"
 msgstr "Esborrany"
+
+msgctxt "model:ir.action.act_window.domain,name:act_review_domain_all"
+msgid "All"
+msgstr "Tots"
+
+msgctxt "model:ir.action.act_window.domain,name:act_review_domain_pending"
+msgid "Pending"
+msgstr "Pendent"
+
+msgctxt "model:ir.action.act_window.domain,name:act_review_domain_processing"
+msgid "Processing"
+msgstr "En procés"
+
+msgctxt "model:ir.action.act_window.domain,name:act_review_domain_to_notice"
+msgid "Notice"
+msgstr "Avisos"
 
 msgctxt "model:ir.message,text:cannot_delete"
 msgid ""
@@ -586,6 +530,22 @@ msgstr ""
 "The party \"%(party)s\" can not be erased because he has pending contracts "
 "for \"the company \"%(company)s\""
 
+msgctxt "model:ir.message,text:review_cannot_delete"
+msgid ""
+"Contract Review \"%(review)s\" cannot be removed because is not in pending "
+"state."
+msgstr ""
+"La revisió de contracte \"%(review)s\" no es pot eliminar perquè no està en "
+"estat \"Pendent\"."
+
+msgctxt "model:ir.message,text:review_with_lines"
+msgid ""
+"Contract Review \"%(review)s\" cannot move to \"Pending\" because it has "
+"lines created."
+msgstr ""
+" La revisió del contracte \"%(review)s\" no pot passar a \"Pendent\" perquè"
+" té línies creades."
+
 msgctxt "model:ir.model.button,confirm:contract_cancel_button"
 msgid ""
 "Cancelled contracts no longer create consumptions. Are you sure you want to "
@@ -614,6 +574,22 @@ msgctxt "model:ir.model.button,string:contract_finish_button"
 msgid "Finish"
 msgstr "Finalitzar"
 
+msgctxt "model:ir.model.button,string:contract_review_cancelled_button"
+msgid "Cancelled"
+msgstr "Cancel·lat"
+
+msgctxt "model:ir.model.button,string:contract_review_done_button"
+msgid "Done"
+msgstr "Realitzat"
+
+msgctxt "model:ir.model.button,string:contract_review_pending_button"
+msgid "Pending"
+msgstr "Pendent"
+
+msgctxt "model:ir.model.button,string:contract_review_processing_button"
+msgid "Processing"
+msgstr "En procés"
+
 msgctxt "model:ir.rule.group,name:rule_group_contract"
 msgid "Contract Company Rule"
 msgstr "Regla de contracte de l'empresa"
@@ -625,6 +601,10 @@ msgstr "Regla de l’empresa de consum de contracte"
 msgctxt "model:ir.rule.group,name:rule_group_contract_line"
 msgid "Contract Line Company Rule"
 msgstr "Regla de l'empresa de línia de contracte"
+
+msgctxt "model:ir.sequence,name:sequence_contract"
+msgid "Contract"
+msgstr "Contracte"
 
 msgctxt "model:ir.sequence.type,name:sequence_type_contract"
 msgid "Contract"
@@ -665,6 +645,14 @@ msgstr "Crea consums"
 msgctxt "model:ir.ui.menu,name:menu_create_invoices"
 msgid "Create Invoices"
 msgstr "Crea factures"
+
+msgctxt "model:ir.ui.menu,name:menu_create_reviews"
+msgid "Create Reviews"
+msgstr "Crear revisions"
+
+msgctxt "model:ir.ui.menu,name:menu_review"
+msgid "Reviews"
+msgstr "Revisions"
 
 msgctxt "model:party.party.contract_grouping_method,name:"
 msgid "Party Contract Grouping Method"
@@ -726,6 +714,26 @@ msgctxt "selection:contract.line,contract_state:"
 msgid "Finished"
 msgstr "Finalitzat"
 
+msgctxt "selection:contract.review,state:"
+msgid "Canceled"
+msgstr "Cancel·lat"
+
+msgctxt "selection:contract.review,state:"
+msgid "Done"
+msgstr "Realitzat"
+
+msgctxt "selection:contract.review,state:"
+msgid "Pending"
+msgstr "Pendent"
+
+msgctxt "selection:contract.review,state:"
+msgid "Processing"
+msgstr "En procés"
+
+msgctxt "selection:ir.cron,method:"
+msgid "Contract - Create Reviews"
+msgstr "Contracte - Crear revisions"
+
 msgctxt "selection:party.party,contract_grouping_method:"
 msgid "Group contracts"
 msgstr "Agrupar contractes"
@@ -743,8 +751,12 @@ msgstr ""
 "les voleu abonar? "
 
 msgctxt "view:contract.configuration:"
-msgid "Contract Configuration"
-msgstr "Configuració de contractes"
+msgid "Reviews"
+msgstr "Revisions"
+
+msgctxt "view:contract.consumption:"
+msgid "Contract Consumption"
+msgstr "Consum de contractes"
 
 msgctxt "view:contract.consumption:"
 msgid "Invoice"
@@ -758,9 +770,17 @@ msgctxt "view:contract.create_invoices.start:"
 msgid "Create invoices up to"
 msgstr "Crear factures desde"
 
+msgctxt "view:contract.create_reviews.start:"
+msgid "Create Contract Reviews"
+msgstr "Crear revisions de contracte"
+
 msgctxt "view:contract.line:"
 msgid "Contract Line"
 msgstr "Línia de contracte"
+
+msgctxt "view:contract.review:"
+msgid "Contract"
+msgstr "Contractes"
 
 msgctxt "view:contract.service:"
 msgid "Contract Service"
@@ -773,6 +793,10 @@ msgstr "Contracte"
 msgctxt "view:contract:"
 msgid "Invoice recurrence"
 msgstr "Recurrència factura"
+
+msgctxt "view:contract:"
+msgid "Review"
+msgstr "Revisió"
 
 msgctxt "view:party.party:"
 msgid "Contract"
@@ -794,3 +818,11 @@ msgstr "D'acord"
 msgctxt "wizard_button:contract.create_invoices,start,end:"
 msgid "Cancel"
 msgstr "Cancel·la"
+
+msgctxt "wizard_button:contract.create_reviews,start,create_reviews:"
+msgid "OK"
+msgstr "D'acord"
+
+msgctxt "wizard_button:contract.create_reviews,start,end:"
+msgid "Cancel"
+msgstr "Cancel·lat"
