FIX pending, noticie domain and company contract review #0410592

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -522,15 +522,7 @@ msgctxt "model:ir.message,text:missing_journal"
 msgid "Please, configure a journal before creating contract invoices."
 msgstr "Si us plau, configura el diari abans de crear factures de contractes."
 
-msgctxt "model:ir.message,text:pending_contract"
-msgid ""
-"The party \"%(party)s\" can not be erased because he has pending contracts "
-"for the company \"%(company)s\"."
-msgstr ""
-"The party \"%(party)s\" can not be erased because he has pending contracts "
-"for \"the company \"%(company)s\""
-
-msgctxt "model:ir.message,text:review_cannot_delete"
+msgctxt "model:ir.message,text:msg_review_cannot_delete"
 msgid ""
 "Contract Review \"%(review)s\" cannot be removed because is not in pending "
 "state."
@@ -538,13 +530,21 @@ msgstr ""
 "La revisió de contracte \"%(review)s\" no es pot eliminar perquè no està en "
 "estat \"Pendent\"."
 
-msgctxt "model:ir.message,text:review_with_lines"
+msgctxt "model:ir.message,text:msg_review_with_lines"
 msgid ""
 "Contract Review \"%(review)s\" cannot move to \"Pending\" because it has "
 "lines created."
 msgstr ""
 " La revisió del contracte \"%(review)s\" no pot passar a \"Pendent\" perquè"
 " té línies creades."
+
+msgctxt "model:ir.message,text:pending_contract"
+msgid ""
+"The party \"%(party)s\" can not be erased because he has pending contracts "
+"for the company \"%(company)s\"."
+msgstr ""
+"The party \"%(party)s\" can not be erased because he has pending contracts "
+"for \"the company \"%(company)s\""
 
 msgctxt "model:ir.model.button,confirm:contract_cancel_button"
 msgid ""
