--- a/locale/es.po
+++ b/locale/es.po
@@ -524,15 +524,7 @@ msgctxt "model:ir.message,text:missing_journal"
 msgid "Please, configure a journal before creating contract invoices."
 msgstr "Por favor, configura el diario antes de crear facturas."
 
-msgctxt "model:ir.message,text:pending_contract"
-msgid ""
-"The party \"%(party)s\" can not be erased because he has pending contracts "
-"for the company \"%(company)s\"."
-msgstr ""
-"No se puede eliminar el tercero \"%(party)s\" porqué tiene contractos "
-"pendientes para la empresa \"%(company)s\"."
-
-msgctxt "model:ir.message,text:review_cannot_delete"
+msgctxt "model:ir.message,text:msg_review_cannot_delete"
 msgid ""
 "Contract Review \"%(review)s\" cannot be removed because is not in pending "
 "state."
@@ -540,13 +532,21 @@ msgstr ""
 "La revisión de contrato \"%(review)s\" no se puede eliminar porque no está "
 "en estado \"Pendiente\"."
 
-msgctxt "model:ir.message,text:review_with_lines"
+msgctxt "model:ir.message,text:msg_review_with_lines"
 msgid ""
 "Contract Review \"%(review)s\" cannot move to \"Pending\" because it has "
 "lines created."
 msgstr ""
 "La revisión del contrato \"%(review)s\" no se puede mover a \"Pendiente\" "
 "porque tiene líneas creadas."
+
+msgctxt "model:ir.message,text:pending_contract"
+msgid ""
+"The party \"%(party)s\" can not be erased because he has pending contracts "
+"for the company \"%(company)s\"."
+msgstr ""
+"No se puede eliminar el tercero \"%(party)s\" porqué tiene contractos "
+"pendientes para la empresa \"%(company)s\"."
 
 msgctxt "model:ir.model.button,confirm:contract_cancel_button"
 msgid ""
