Allow create new contract lines in confirm contract #049483

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -469,10 +469,10 @@ msgstr "Avisos"
 msgctxt "model:ir.message,text:cannot_delete"
 msgid ""
 "Contract Line \"%(line)s\" cannot be removed because contract "
-"\"%(contract)s\" is not in draft state."
+"\"%(contract)s\" has consumptions."
 msgstr ""
 "La línia de contracte \"%(line)s\" no es pot eliminar perquè el contracte "
-"\"%(contract)s\" no està en estat esborrany."
+"\"%(contract)s\" té consums."
 
 msgctxt "model:ir.message,text:cannot_draft"
 msgid "Contract \"%s\" can not be moved to draft because it has consumptions."
