Allow create new contract lines in confirm contract #049483

--- a/locale/es.po
+++ b/locale/es.po
@@ -473,10 +473,10 @@ msgstr "Avisos"
 msgctxt "model:ir.message,text:cannot_delete"
 msgid ""
 "Contract Line \"%(line)s\" cannot be removed because contract "
-"\"%(contract)s\" is not in draft state."
+"\"%(contract)s\" has consumptions."
 msgstr ""
 "La línea de contrato \"%(line)s\" no se puede eliminar porqué el contrato "
-"\"%(contract)s\" no está en estado borrador."
+"\"%(contract)s\" dispone de consumos."
 
 msgctxt "model:ir.message,text:cannot_draft"
 msgid "Contract \"%s\" can not be moved to draft because it has consumptions."
