--- a/locale/ca.po
+++ b/locale/ca.po
@@ -186,6 +186,10 @@ msgctxt "field:contract.line,end_date:"
 msgid "End Date"
 msgstr "Data finalització"
 
+msgctxt "field:contract.line,has_consumptions:"
+msgid "Has Consumptions"
+msgstr "Té consums"
+
 msgctxt "field:contract.line,last_consumption_date:"
 msgid "Last Consumption Date"
 msgstr "Data últim consum"
@@ -213,6 +217,10 @@ msgstr "Activitats"
 msgctxt "field:contract.review,alarm_date:"
 msgid "Alarm Date"
 msgstr "Data d'alarma"
+
+msgctxt "field:contract.review,company:"
+msgid "Company"
+msgstr "Empresa"
 
 msgctxt "field:contract.review,contract:"
 msgid "Contract"
@@ -269,6 +277,14 @@ msgstr "Producte"
 msgctxt "field:party.party,contract_grouping_method:"
 msgid "Contract Grouping Method"
 msgstr "Mètode d'agrupació de contractes"
+
+msgctxt "field:party.party,contract_grouping_methods:"
+msgid "Contract Grouping Methods"
+msgstr "Mètodes agrupació contracte"
+
+msgctxt "field:party.party.contract_grouping_method,company:"
+msgid "Company"
+msgstr "Empresa"
 
 msgctxt "field:party.party.contract_grouping_method,contract_grouping_method:"
 msgid "Contract Grouping Method"
@@ -531,8 +547,8 @@ msgid ""
 "Contract Review \"%(review)s\" cannot move to \"Pending\" because it has "
 "lines created."
 msgstr ""
-" La revisió del contracte \"%(review)s\" no pot passar a \"Pendent\" perquè"
-" té línies creades."
+" La revisió del contracte \"%(review)s\" no pot passar a \"Pendent\" perquè "
+"té línies creades."
 
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
@@ -587,16 +603,20 @@ msgid "Processing"
 msgstr "En procés"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract"
-msgid "Contract Company Rule"
-msgstr "Regla de contracte de l'empresa"
+msgid "User in company"
+msgstr "Usuari a les empreses"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_consumption"
-msgid "Contract Consumption Company Rule"
-msgstr "Regla de l’empresa de consum de contracte"
+msgid "User in company"
+msgstr "Usuari a les empreses"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_line"
-msgid "Contract Line Company Rule"
-msgstr "Regla de l'empresa de línia de contracte"
+msgid "User in company"
+msgstr "Usuari a les empreses"
+
+msgctxt "model:ir.rule.group,name:rule_group_contract_review"
+msgid "User in company"
+msgstr "Usuari a les empreses"
 
 msgctxt "model:ir.sequence,name:sequence_contract"
 msgid "Contract"
@@ -735,6 +755,16 @@ msgid "Group contracts"
 msgstr "Agrupar contractes"
 
 msgctxt "selection:party.party,contract_grouping_method:"
+msgid "None"
+msgstr "Cap"
+
+msgctxt ""
+"selection:party.party.contract_grouping_method,contract_grouping_method:"
+msgid "Group contracts"
+msgstr "Agrupar contractes"
+
+msgctxt ""
+"selection:party.party.contract_grouping_method,contract_grouping_method:"
 msgid "None"
 msgstr "Cap"
 
